Fix ui_spacing styles for image heros in threads

--- a/src/static/css/ui_spacing/shared.css
+++ b/src/static/css/ui_spacing/shared.css
@@ -10,6 +10,10 @@
   padding: 1.5rem 1rem 1rem 1rem!important;
 }
 
+.scTailwindThreadQuestionQuestioncardhero {
+  margin: 1rem calc(-2*1.5rem) 0!important;
+}
+
 .scTailwindThreadQuestionQuestioncardsub-content {
   padding: 0 1rem 1rem!important;
 }
